--- a/package.json
+++ b/package.json
@@ -32,9 +32,14 @@
     "build": "run-s build:clean build:ts",
     "ci": "run-s test build"
   },
+  "dependencies": {
+    "escape-string-regexp": "^2.0.0"
+  },
   "devDependencies": {
+    "@types/benchmark": "^1.0.31",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.0.10",
+    "benchmark": "^2.1.4",
     "jest": "^24.8.0",
     "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
