--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,10 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "exclude": ["./src/**/*.test.ts", "./dist", "./node_modules"]
+  "exclude": [
+    "./src/**/*.test.ts",
+    "./src/benchmark.ts",
+    "./dist",
+    "./node_modules"
+  ]
 }
