--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "build:clean": "rm -rf ./dist",
     "build:ts": "tsc",
     "build": "run-s build:clean build:ts",
-    "ci": "run-s test build"
+    "size": "size-limit",
+    "ci": "run-s test build size"
   },
   "dependencies": {
     "escape-string-regexp": "^2.0.0"
@@ -40,15 +41,26 @@
     "@types/jest": "^24.0.15",
     "@types/node": "^12.0.10",
     "benchmark": "^2.1.4",
+    "husky": "^2.7.0",
     "jest": "^24.8.0",
     "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
+    "size-limit": "^1.3.7",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2"
   },
+  "size-limit": [
+    {
+      "path": "./dist/index.js",
+      "size": "1 KB"
+    }
+  ],
   "jest": {
     "preset": "ts-jest/presets/js-with-ts",
     "testEnvironment": "node"
+  },
+  "husky": {
+    "pre-push": "run-s test build size"
   }
 }
