--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "escape-string-regexp": "^2.0.0"
   },
   "devDependencies": {
+    "@size-limit/preset-small-lib": "^2.1.1",
     "@types/benchmark": "^1.0.31",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.0.10",
@@ -53,7 +54,7 @@
   "size-limit": [
     {
       "path": "./dist/index.js",
-      "size": "1 KB"
+      "limit": "1 KB"
     }
   ],
   "jest": {
