--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redact-env",
-  "version": "0.2.0",
+  "version": "0.0.0-semantically-released",
   "description": "Redact values of critical environment variables in a string",
   "main": "dist/index.js",
   "license": "MIT",
@@ -24,8 +24,8 @@
     "access": "public"
   },
   "scripts": {
-    "test": "jest --verbose",
-    "test:watch": "jest --verbose --watch",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
     "dev": "nodemon -e ts,.env -w .env -w . -x 'run-s build:ts test'",
     "build:clean": "rm -rf ./dist",
     "build:ts": "tsc",
@@ -34,21 +34,33 @@
     "ci": "run-s test build size"
   },
   "dependencies": {
-    "escape-string-regexp": "^3.0.0"
+    "escape-string-regexp": "^4.0.0"
   },
   "devDependencies": {
-    "@size-limit/preset-small-lib": "^3.0.0",
+    "@commitlint/config-conventional": "^8.3.4",
+    "@size-limit/preset-small-lib": "^4.4.5",
     "@types/benchmark": "^1.0.31",
-    "@types/jest": "^25.1.0",
-    "@types/node": "^13.1.2",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.13.2",
     "benchmark": "^2.1.4",
-    "husky": "^4.2.1",
-    "jest": "^25.1.0",
-    "nodemon": "^2.0.2",
+    "commitlint": "^8.3.5",
+    "husky": "^4.2.5",
+    "jest": "^25.4.0",
+    "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
-    "ts-jest": "^25.1.0",
-    "ts-node": "^8.5.4",
-    "typescript": "^3.7.3"
+    "size-limit": "^4.4.5",
+    "ts-jest": "^25.4.0",
+    "ts-node": "^8.9.0",
+    "typescript": "^3.8.3"
+  },
+  "nodemon": {
+    "verbose": false,
+    "execMap": {
+      "ts": "ts-node"
+    },
+    "ignore": [
+      "./dist"
+    ]
   },
   "size-limit": [
     {
@@ -57,12 +69,56 @@
     }
   ],
   "jest": {
+    "verbose": true,
     "preset": "ts-jest/presets/js-with-ts",
     "testEnvironment": "node"
   },
+  "prettier": {
+    "arrowParens": "avoid",
+    "semi": false,
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "none",
+    "useTabs": false
+  },
   "husky": {
     "hooks": {
-      "pre-push": "yarn ci"
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ],
+    "rules": {
+      "type-enum": [
+        2,
+        "always",
+        [
+          "build",
+          "chore",
+          "ci",
+          "clean",
+          "doc",
+          "feat",
+          "fix",
+          "perf",
+          "ref",
+          "revert",
+          "style",
+          "test"
+        ]
+      ],
+      "subject-case": [
+        0,
+        "always",
+        "sentence-case"
+      ],
+      "body-leading-blank": [
+        2,
+        "always",
+        true
+      ]
     }
   }
 }
