fix: Explicitly declare path to TS types
This lets npmjs.com know that the project has types,
and shows a helpful TypeScript icon.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0-semantically-released",
   "description": "Redact values of critical environment variables in a string",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "author": {
     "name": "François Best",
