--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@types/node": "^14.14.5",
     "benchmark": "^2.1.4",
     "commitlint": "^11.0.0",
-    "husky": "^4.3.0",
+    "husky": "4.x",
     "jest": "^26.6.1",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
