--- a/package.json
+++ b/package.json
@@ -2,8 +2,6 @@
   "name": "redact-env",
   "version": "0.0.0-semantically-released",
   "description": "Redact values of critical environment variables in a string",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
   "license": "MIT",
   "author": {
     "name": "François Best",
@@ -24,16 +22,28 @@
   "publishConfig": {
     "access": "public"
   },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "type": "module",
+  "sideEffects": false,
+  "exports": {
+    ".": {
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
     "test": "jest --coverage",
     "test:watch": "jest --watch",
-    "build:clean": "rm -rf ./dist",
-    "build:ts": "tsc",
-    "build": "run-s build:clean build:ts",
+    "prebuild": "rm -rf ./dist",
+    "build:typecheck": "tsc",
+    "build:transpile": "unbuild",
+    "build": "run-p build:*",
     "size": "size-limit",
     "ci": "run-s test build size"
   },
-  "dependencies": {},
   "devDependencies": {
     "@commitlint/config-conventional": "^17.1.0",
     "@size-limit/preset-small-lib": "^8.1.0",
@@ -48,7 +58,8 @@
     "size-limit": "^8.1.0",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "unbuild": "^0.9.4"
   },
   "size-limit": [
     {
